--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div id="app">
-      <img src="/logo.sgv" alt="Logo" />
+      <img src="/logo.svg" alt="Logo" />
       <h1>Shorts Summary</h1>
 
       <form id="form">
